@@ -7,28 +7,71 @@
 # This phone number format is biased towards those types found in the United
 # States and may need to be adjusted for international support.
 class PhoneNumber < ActiveRecord::Base
+  # The valid lengths allowed per country code for area code + subscriber number
+  VALID_LENGTHS = {
+    1 =>  10,     7 => 10,      20 => 9,       27 => 9,      30 => 10,      31 => 9,
+    32 => 8..9,   33 => 9..10,  34 => 9,       36 => 8..9,   39 => 9,       40 => 9,
+    41 => 9..10,  43 => 7..13,  44 => 10..11,  45 => 8,      46 => 9,       47 => 8,     
+    48 => 9,      49 => 7..11,  51 => 8..9,    52 => 8..10,  53 => 8,       54 => 8..9, 
+    55 => 10,     56 => 8..9,   57 => 9..10,   58 => 10,     60 => 9..10,   61 => 9,
+    62 => 8..11,  63 => 8..10,  64 => 8..9,    65 => 8..9,   66 => 9..10,   81 => 9..10,
+    82 => 8..9,   84 => 7..10,  86 => 7..11,   90 => 10,     91 => 10,      92 => 9..10,
+    93 => 8..9,   94 => 10,     95 => 7..8,    98 => 10,     212 => 8,      213 => 8,
+    216 => 8,     218 => 8..9,  220 => 7,      221 => 7,     222 => 7,      223 => 8,
+    224 => 8,     225 => 8,     226 => 8,      227 => 8,     228 => 7,      229 => 8,
+    230 => 7,     231 => 6..8,  232 => 8,      233 => 5..8,  234 => 7..8,   235 => 7,
+    236 => 8,     237 => 8,     238 => 7,      239 => 6..7,  240 => 6,      241 => 6..8,
+    242 => 7,     243 => 8,     244 => 9,      245 => 7,     246 => 4..7,   247 => 4,
+    248 => 6,     249 => 9,     250 => 5..8,   251 => 9,     252 => 7..8,   253 => 6,
+    254 => 9,     255 => 9,     256 => 9,      257 => 8,     258 => 8..9,   260 => 9,
+    261 => 9,     262 => 10,    263 => 8..11,  264 => 6..7,  265 => 8,      266 => 8,
+    267 => 7,     268 => 7,     269 => 7,      290 => 4,     291 => 7,      297 => 7,
+    298 => 6,     299 => 6,     350 => 8,      351 => 9,     352 => 9,      353 => 9,
+    354 => 7..9,  355 => 7..9,  356 => 8,      357 => 8,     358 => 9,      359 => 8..10,
+    370 => 8,     371 => 8,     372 => 7..8,   373 => 8,     374 => 8,      375 => 9,
+    376 => 6..9,  377 => 8..9,  378 => 9..12,  380 => 8..9,  381 => 9,      382 => 8,
+    385 => 8,     386 => 8,     387 => 8,      388 => 8..10, 389 => 7..8,   420 => 9,
+    421 => 9,     423 => 7,     500 => 5,      501 => 7,     502 => 8,      503 => 8,
+    504 => 7..8,  505 => 8,     506 => 8,      507 => 7,     508 => 6,      509 => 8,
+    590 => 10,    591 => 8,     592 => 6..7,   593 => 8..9,  594 => 10,     595 => 9,
+    596 => 10,    597 => 6,     598 => 7..8,   599 => 7,     670 => 7,      672 => 6,
+    673 => 7,     674 => 7,     675 => 7,      676 => 5..7,  677 => 5,      678 => 5..7,
+    679 => 7,     680 => 7,     681 => 6,      682 => 5,     683 => 4,      685 => 6..7,
+    686 => 5,     687 => 6,     688 => 5,      689 => 6,     690 => 4,      691 => 7,
+    692 => 7,     800 => 8..12, 808 => 8,      850 => 8..9,  852 => 8,      853 => 8,
+    855 => 8,     856 => 8,     870 => 9,      871 => 9,     872 => 9,      873 => 9,
+    874 => 9,     878 => 9,     880 => 10,     881 => 6,     882 => 6,      883 => 6,
+    886 => 7..8,  960 => 7,     961 => 8,      962 => 8..9,  963 => 7..8,   964 => 8..10,
+    965 => 7,     966 => 8..9,  967 => 7..9,   968 => 8,     970 => 8,      971 => 7..9,
+    972 => 7..9,  973 => 8,     974 => 7,      975 => 7..8,  976 => 7..10,  977 => 7..8,
+    979 => 9,     991 => 9,     992 => 9,      993 => 8,     994 => 8..9,   995 => 9,
+    996 => 9,     998 => 9
+  }.stringify_keys
+  
   # The list of country calling codes as defined by ITU-T recommendation E.164
-  COUNTRY_CODES = %w{
-    1   7 20 27 30 31 32 33 34 36 39 40 41 43 44 45 46 47 48 49 51 52 53 54 55
-    56 57 58 60 61 62 63 64 65 66 81 82 84 86 90 91 92 93 94 95 98  212 213
-    216 218 220 221 222 223 224 225 226 227 228 229 230 231 232 233 234 235
-    236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253
-    254 255 256 257 258 260 261 262 263 264 265 266 267 268 269 290 291 297
-    298 299 350 351 352 353 354 355 356 357 358 359 370 371 372 373 374 375
-    376 377 378 379 380 381 382 385 386 387 388 389 420 421 423 500 501 502
-    503 504 505 506 507 508 509 590 591 592 593 594 595 596 597 598 599 670
-    672 673 674 675 676 677 678 679 680 681 682 683 684 685 686 687 688 689
-    690 691 692 800 808 850 852 853 855 856 870 871 872 873 874 878 880 881
-    882 883 886 888 960 961 962 963 964 965 966 967 968 970 971 972 973 974
-    975 976 977 979 991 992 993 994 995 996 998
-  }
+  COUNTRY_CODES = VALID_LENGTHS.keys
   
   belongs_to :phoneable, :polymorphic => true
   
   validates_presence_of :phoneable_id, :phoneable_type, :country_code, :number
-  validates_numericality_of :country_code, :number
+  validates_numericality_of :number
   validates_numericality_of :extension, :allow_nil => true
-  validates_length_of :country_code, :in => 1..3
-  validates_length_of :number, :is => 10
   validates_length_of :extension, :maximum => 10, :allow_nil => true
+  validates_inclusion_of :country_code, :in => COUNTRY_CODES
+  
+  validates_each :number do |phone_number, attr, value|
+    country_code = phone_number.country_code
+    
+    if country_code && length = VALID_LENGTHS[country_code]
+      if length.is_a?(Range)
+        if value.nil? || value.size < length.begin
+          phone_number.errors.add(attr, :too_short, :count => length.begin)
+        elsif value.size > length.end
+          phone_number.errors.add(attr, :too_long, :count => length.end)
+        end
+      elsif value.nil? || value.size != length
+        phone_number.errors.add(attr, :wrong_length, :count => length) 
+      end
+    end
+  end
 end
